# gifust

./: .gitignore  Cargo.toml  LICENSE  README.md
Formula/: gifust.rb
src/: cli.rs  convert.rs  filters.rs  main.rs  tui.rs
