[package]
name = "gifust"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Convert videos to GIFs from the CLI or an interactive TUI (ffmpeg palette method)"
license = "MIT"
repository = "https://github.com/lau-sam/gifust"
homepage = "https://github.com/lau-sam/gifust"
readme = "README.md"
keywords = ["gif", "video", "ffmpeg", "tui", "converter"]
categories = ["command-line-utilities", "multimedia::video"]

[[bin]]
name = "gifust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
